<resources>
    <string name="app_name">Paina Cafe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Menu</string>
    <string name="title_notifications">Locations</string>
    <string name="title_account">Account</string>
    <string name="about_us">Pā´ina in Hawaiian means “gathering”. It’s a very simple word, but it strongly represents family and relationships. At Pā´ina Café, we feel that great food is the catalyst that binds relationships closer together. The tastiest and freshest foods help inspire conversation, creativity, fun, and happiness.</string>
    <string name="about_us_title">About Us</string>
    <string name="about_us_2">Pā´ina Café was named one of \"The 17 Most Important Restaurants In Honolulu\" by Summer Nakaishi, Thrillist.com, on July 27, 2015, and selected as one of \"America\'s most amazing meals for $10 or less\" by Cheap Tickets in 2015. Pā´ina Café was also featured on OC16\'s television show, 6 Picks, and selected by Hawaii celebrity hosts as one of Hawaii\'s favorite poke in 2016.</string>
    <string name="poke">HOME OF THE ORIGINAL POKE BOWL</string>
    <string name="poke_notes_1">Our island freshly mixed poke served as poke bowls, salad toppings, or take it home and create your own.</string>
    <string name="poke_notes_2">POKE:</string>
    <string name="poke_notes_3">Spicy Tuna, Shoyu Ahi, Hot Shoyu Ahi , Shoyu Ginger Salmon, Limu Ahi, Wasabi Masago Ahi , Sweet Chili Tofu, and Daily Poke Specials when available.</string>
    <string name="toppings_1">TOPPINGS:</string>
    <string name="toppings_2"><![CDATA[Tempura Flakes, Natto, Taegu, Kim Chee, Takuan, Shredded Nori, Furikake, Masago, Pickled Onions, Green Onion, Seaweed Salad, Kyuri-zuke (Pickled Cucumbers), and Yamakake Style(Yamaimo, Nori, & Green Onion)]]></string>
    <string name="plates_1">PLATES</string>
    <string name="plates_2">Healthy, but no sacrifice on taste. Our plate lunches will keep you on the go.</string>
    <string name="sandwiches_1">SANDWICHES</string>
    <string name="sandwiches_2">We have a wide variety of sandwich choices. Pair it up with a side salad or soup.</string>
    <string name="salads_1">SALADS</string>
    <string name="salads_2">Crispy and flavorful our salads are served as a meal or on the side.</string>
    <string name="now_loading">Now Loading...</string>
    <string name="locations">Pick Your Location</string>
    <string name="ward_center"><![CDATA[1200 Ala Moana Blvd., Honolulu, HI 96814 (Near Bed Bath & Beyond)]]></string>
    <string name="ward_center_title">Ward Center</string>
    <string name="koko_marina_center">Koko Marina Center</string>
    <string name="las_vegas_korean_town_plaza">Las Vegas Korean Town Plaza</string>
    <string name="koko_des">7192 Kalanianaole Hwy Ste. E123A Honolulu, HI 96825</string>
    <string name="las_vegas_des">6870 Spring Mountain Road #G Las Vegas, NV 89146</string>
    <string name="hours_ward">Hours</string>
    <string name="phone_ward">Phone</string>
    <string name="ward_address"><![CDATA[1200 Ala Moana Blvd., Honolulu, HI 96814 (Near Bed Bath & Beyond)]]></string>
    <string name="ward_hours">Mon-Sat 10:00 AM-9:00 PM Sun 10:00 AM-6:00 PM</string>
    <string name="ward_phone">(808) 356–2829</string>
    <string name="koko_address">7192 Kalanianaole Hwy Ste. E123A Honolulu, HI 96825</string>
    <string name="koko_time">Sun-Thur 11:00 AM-7:30 PM Fri-Sat 11:00 AM-8:00 PM</string>
    <string name="koko_number">(808) 356–2829</string>
    <string name="vegas_address">6870 Spring Mountain Road #G Las Vegas, NV 89146</string>
    <string name="vegas_hours">Mon-Sat 11:00 AM-8:00 PM Sun 11:00 AM-6:00 PM</string>
    <string name="vegas_number">(702) 272–2790</string>
</resources>
