<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_koko"
    app:startDestination="@+id/navigation_home_koko">

    <fragment
        android:id="@+id/navigation_home_koko"
        android:name="www.painacafe.com.uikoko.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_koko" />

    <fragment
        android:id="@+id/navigation_dashboard_koko"
        android:name="www.painacafe.com.uikoko.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard_koko" />

    <fragment
        android:id="@+id/navigation_notifications_koko"
        android:name="www.painacafe.com.uikoko.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications_koko" />
    <fragment
        android:id="@+id/navigation_account_koko"
        android:name="www.painacafe.com.uikoko.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account_koko" />
</navigation>
