<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_vegas"
    app:startDestination="@+id/navigation_home_vegas">

    <fragment
        android:id="@+id/navigation_home_vegas"
        android:name="www.painacafe.com.uivegas.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_vegas" />

    <fragment
        android:id="@+id/navigation_dashboard_vegas"
        android:name="www.painacafe.com.uivegas.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard_vegas" />

    <fragment
        android:id="@+id/navigation_notifications_vegas"
        android:name="www.painacafe.com.uivegas.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications_vegas" />
    <fragment
        android:id="@+id/navigation_account_vegas"
        android:name="www.painacafe.com.uivegas.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account_vegas" />
</navigation>
